@@ -17,7 +17,6 @@ import org.junit.Test;
 import org.springframework.mock.web.MockFilterChain;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
-import sun.misc.BASE64Encoder;
 import uk.ac.warwick.sso.client.cache.UserCache;
 import uk.ac.warwick.sso.client.core.OnCampusService;
 import uk.ac.warwick.sso.client.core.OnCampusServiceImpl;
@@ -25,6 +24,7 @@ import uk.ac.warwick.userlookup.*;
 
 import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletRequest;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 import static org.junit.Assert.*;
@@ -67,7 +67,7 @@ public class SSOClientFilterTest  {
 	}
 	
 	private void addAuth(String user, String pass) throws Exception {
-		req.addHeader("Authorization", "Basic " + new BASE64Encoder().encodeBuffer((user + ":" + pass).getBytes("UTF-8")));
+		req.addHeader("Authorization", String.format("Basic %s", Base64.getEncoder().encodeToString((user + ":" + pass).getBytes(StandardCharsets.UTF_8))));
 	}
 
 	@Test
@@ -131,6 +131,67 @@ public class SSOClientFilterTest  {
 		user = (User) req.getAttribute(SSOClientFilter.USER_KEY);
 		assertNotNull(user);
 		assertFalse(user.isFoundUser());
+	}
+
+	@Test
+	public void testBasicAuthBase64Padding() throws Exception {
+		wireFilter();
+
+		BaseConfiguration configuration = new BaseConfiguration();
+		configuration.addProperty("httpbasic.allow", true);
+		configuration.addProperty("mode", "old");
+		setConfigAndHandler(configuration);
+
+		// Users A, B, C have 0, 1 and 2 characters of padding each
+
+		final User alice = new User("alice");
+		alice.setFoundUser(true);
+
+		final User bob = new User("bob");
+		bob.setFoundUser(true);
+
+		final User cyle = new User("cyle");
+		cyle.setFoundUser(true);
+
+		m.checking(new Expectations(){{
+			one(userLookup).getUserByIdAndPassNonLoggingIn("alice", "aaa");
+				will(returnValue(alice));
+			one(userLookup).getUserByIdAndPassNonLoggingIn("bob", "aaaa");
+				will(returnValue(bob));
+			one(userLookup).getUserByIdAndPassNonLoggingIn("cyle", "aa");
+				will(returnValue(cyle));
+			one(userLookup).getOnCampusService(); will(returnValue(onCampusService));
+		}});
+
+		// header values generated from cURL
+		req.addHeader("Authorization", "Basic YWxpY2U6YWFh");
+		f.doFilter(req, res, chain);
+
+		User user = (User) req.getAttribute(SSOClientFilter.USER_KEY);
+		assertNotNull(user);
+		assertTrue("should be found user", user.isFoundUser());
+		assertEquals("alice", ((HttpServletRequest)chain.getRequest()).getRemoteUser());
+
+		newRequestGuff();
+
+		req.addHeader("Authorization", "Basic Ym9iOmFhYWE=");
+		f.doFilter(req, res, chain);
+
+		user = (User) req.getAttribute(SSOClientFilter.USER_KEY);
+		assertNotNull(user);
+		assertTrue("should be found user", user.isFoundUser());
+		assertEquals("bob", ((HttpServletRequest)chain.getRequest()).getRemoteUser());
+
+		newRequestGuff();
+
+		req.addHeader("Authorization", "Basic Y3lsZTphYQ==");
+		f.doFilter(req, res, chain);
+
+		user = (User) req.getAttribute(SSOClientFilter.USER_KEY);
+		assertNotNull(user);
+		assertTrue("should be found user", user.isFoundUser());
+		assertEquals("cyle", ((HttpServletRequest)chain.getRequest()).getRemoteUser());
+
 	}
 
 	@Test
